# InformationTheory

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
DCT/: CMakeLists.txt
DCT/DCTApp/: CMakeLists.txt  main.cpp
DCT/DCTCompare/: CMakeLists.txt  DCT.pro  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
DCT/DCTLib/: CMakeLists.txt  Matrix.cpp  Matrix.hpp
DCT/PSNRTableApp/: CMakeLists.txt  main.cpp
Huffman/: CMakeLists.txt  Node.hpp  Tree.hpp  main.cpp
RLE/: CMakeLists.txt  main.cpp
data/: input_matrix_var4.txt  mydata_huffman.txt
