cmake_minimum_required(VERSION 3.6)
project(InformationTheory)

set(CMAKE_CXX_STANDARD 11)

if(CMAKE_BUILD_TYPE STREQUAL "")
    set(CMAKE_BUILD_TYPE "RelWithDebInfo")
endif()

if(MSVC)
    #set(CompilerFlags
    #    CMAKE_CXX_FLAGS
    #    CMAKE_CXX_FLAGS_DEBUG
    #    CMAKE_CXX_FLAGS_RELEASE
	#	 CMAKE_CXX_FLAGS_MINSIZEREL
	#	 CMAKE_CXX_FLAGS_RELWITHDEBINFO
    #    CMAKE_C_FLAGS
    #    CMAKE_C_FLAGS_DEBUG
    #    CMAKE_C_FLAGS_RELEASE
	#	 CMAKE_C_FLAGS_MINSIZEREL
	#	 CMAKE_C_FLAGS_RELWITHDEBINFO
    #)
    #foreach(CompilerFlag ${CompilerFlags})
    #    string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
    #endforeach()
    set(CMAKE_EXECUTABLE_SUFFIX "_msvc${CMAKE_EXECUTABLE_SUFFIX}")
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/lib)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/lib)

add_subdirectory(RLE)
add_subdirectory(DCT)
